# DocPattern

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json  стуртура проекта (предварительно).txt
src/: CMakeLists.txt
src/core/: PythonWorker.cpp  PythonWorker.h  RulesManager.cpp  RulesManager.h  database.cpp  database.h
src/models/: TemplateData.h  TemplateFile.h  TemplateRule.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/pages/: templateeditpage.cpp  templateeditpage.h  templaterulespage.cpp  templaterulespage.h  templateuploadpage.cpp  templateuploadpage.h
